# mcuxsdk-doc

./: .gitignore  404.rst  CMakeLists.txt  CONTRIBUTING.md  Doxyfile_lib_PDF_RM_Drivers  LICENSE  Makefile  Proposed-TOC.md  README.md  SBOM.spdx.json  conf.py  generation.rst  index-tex.rst  index.rst  requirements.txt  run_a_project_using_armgcc.md  run_a_project_using_mcux.md  versions.json
Boards/: index.rst
Boards/evkmcimx7ulp/: index.rst
Boards/evkmimx8mm/: index.rst
Boards/evkmimx8mn/: index.rst
Boards/evkmimxrt1010/: index.rst
Boards/evkmimxrt1020/: index.rst
Boards/evkmimxrt1060/: index.rst
Boards/frdmk32l2a4s/: index.rst
Boards/frdmk32l3a6/: index.rst
Boards/frdmk64f/: index.rst
Boards/frdmke02z40m/: index.rst
Boards/frdmke04z/: index.rst
Boards/frdmke15z/: index.rst
Boards/frdmke16z/: index.rst
Boards/frdmkv31f/: index.rst
Boards/hvpkv31f120m/: index.rst
Boards/lpcxpresso54114/: index.rst
Boards/lpcxpresso54628/: index.rst
Boards/lpcxpresso55s28/: index.rst
Boards/lpcxpresso802/: index.rst
Boards/lpcxpresso812max/: index.rst
Boards/lpcxpresso824max/: index.rst
Boards/lpcxpresso845max/: index.rst
Boards/mekmimx8qm/: index.rst
Boards/mekmimx8qx/: index.rst
Boards/twrkm35z75m/: index.rst
_cfg/: mcux_doc_config_schema.json  user_config.yml
_cfg/full/: conf.py
_cfg/nodoxygen/: conf.py
_doxygen/: mainpage.md
_doxygen/lib_dox_v1/: Doxyfile_lib_PDF_RM_BLE_HOST  Doxyfile_lib_PDF_RM_K32L2A41A  Doxyfile_lib_PDF_RM_K32L2B31A  Doxyfile_lib_PDF_RM_K32L3A60  Doxyfile_lib_PDF_RM_K32W1480  Doxyfile_lib_PDF_RM_KW45B41Z83  Doxyfile_lib_PDF_RM_KW47B42ZB7  Doxyfile_lib_PDF_RM_LPC51U68  Doxyfile_lib_PDF_RM_LPC54608  Doxyfile_lib_PDF_RM_LPC54618  Doxyfile_lib_PDF_RM_LPC54628  Doxyfile_lib_PDF_RM_LPC54S018  Doxyfile_lib_PDF_RM_LPC54S018M  Doxyfile_lib_PDF_RM_LPC55S06  Doxyfile_lib_PDF_RM_LPC55S16  Doxyfile_lib_PDF_RM_LPC55S28  Doxyfile_lib_PDF_RM_LPC55S36  Doxyfile_lib_PDF_RM_LPC55S69  Doxyfile_lib_PDF_RM_LPC802  Doxyfile_lib_PDF_RM_LPC804  Doxyfile_lib_PDF_RM_LPC824  Doxyfile_lib_PDF_RM_LPC845  Doxyfile_lib_PDF_RM_LPC865  Doxyfile_lib_PDF_RM_MC56F80748  Doxyfile_lib_PDF_RM_MC56F81768  Doxyfile_lib_PDF_RM_MC56F82748  Doxyfile_lib_PDF_RM_MC56F83789  Doxyfile_lib_PDF_RM_MC56F84789  Doxyfile_lib_PDF_RM_MCIMX7U5  Doxyfile_lib_PDF_RM_MCXA153  Doxyfile_lib_PDF_RM_MCXA156  Doxyfile_lib_PDF_RM_MCXA166  Doxyfile_lib_PDF_RM_MCXA174  Doxyfile_lib_PDF_RM_MCXA266  Doxyfile_lib_PDF_RM_MCXA276  Doxyfile_lib_PDF_RM_MCXA344  Doxyfile_lib_PDF_RM_MCXA346  Doxyfile_lib_PDF_RM_MCXA366  Doxyfile_lib_PDF_RM_MCXA577  Doxyfile_lib_PDF_RM_MCXC041  (+51 more)
_extensions/: config_manager.py  doxyrunner.py  doxyrunner_html.py  doxyrunner_sphinx.py  external_content.py  latex_writer.py  page_filter.py  vcs_link.py
_extensions/template/: device_rm.tmp
_static/: book_theme_custom.css  custom.css
_static/latex/: title.tex
_templates/: author.html  breadcrumbs.html  copyright.html  footer.html  layout.html  page.html  sversions.html
_templates/sections/: footer-content.html
boards/: hello_world_board.rst  index.rst  supported_development_systems.md
boards/DSC/: index.rst
boards/Kinetis/: index.rst
boards/LPC/: index.rst
boards/MCX/: index.rst
boards/RT/: index.rst
boards/Wireless/: index.rst
boards/evk9mimx8ulp/: index.rst
boards/evkbimxrt1050/: index.rst
boards/evkbmimxrt1060/: index.rst
boards/evkbmimxrt1170/: index.rst
boards/evkcmimxrt1060/: index.rst
boards/evkmcimx7ulp/: index.rst
boards/evkmimx8dxl/: index.rst
boards/evkmimx8mm/: index.rst
boards/evkmimx8mn/: index.rst
boards/evkmimx8mnddr3l/: index.rst
boards/evkmimx8mp/: index.rst
boards/evkmimx8mq/: index.rst
boards/evkmimx8ulp/: index.rst
boards/evkmimxrt1010/: index.rst
boards/evkmimxrt1015/: index.rst
boards/evkmimxrt1020/: index.rst
boards/evkmimxrt1024/: index.rst
boards/evkmimxrt1040/: index.rst
boards/evkmimxrt1060/: index.rst
boards/evkmimxrt1064/: index.rst
boards/evkmimxrt1160/: index.rst
boards/evkmimxrt1170/: index.rst
boards/evkmimxrt1180/: index.rst
boards/evkmimxrt595/: index.rst
boards/evkmimxrt685/: index.rst
boards/frdmk22f/: index.rst
boards/frdmk28f/: index.rst
boards/frdmk28fa/: index.rst
boards/frdmk32l2a4s/: index.rst
boards/frdmk32l2b/: index.rst
boards/frdmk32l3a6/: index.rst
boards/frdmk32w042/: index.rst
boards/frdmk64f/: index.rst
boards/frdmk66f/: index.rst
boards/frdmk82f/: index.rst
boards/frdmke02z40m/: index.rst
boards/frdmke06z/: index.rst
boards/frdmke15z/: index.rst
boards/frdmke16z/: index.rst
boards/frdmke17z/: index.rst
boards/i.MX/: index.rst
build_system/: Build_And_Configuration_System_Based_On_CMake_And_Kconfig.md  Build_System_Based_On_CMake.md  Configuration_System_Based_On_Kconfig.md  Frequently_Asked_Questions.md  meta_build_system.md
contribute/: CONTRIBUTING.md  index.rst
develop/: architect.md  index.rst
develop/build_system/McuxSDK_CMake_package_freestanding_example/: CMakeLists.txt  app.h  hardware_init.c  hello_world.c  prj.conf  readme.txt
develop/build_system/external_module_example/mcux/: CMakeLists.txt  Kconfig  module.yml
drivers/: Doxyfile_lib_PDF_RM_Drivers  LPC55S69.rst  LPC802.rst  index.rst
gsd/: Readme_GS.txt  cli.md  cmake_project_walkthrough.md  codebase.md  config_tools.md  config_tools.md.orig  explore_sdk.md  first.rst  first_build.md  index.rst  installation.md  memory_configuration.md  package.rst  projects.md  repo.rst  repo_setup.md  run_a_demo_using_mcuxvsc.md  run_a_project_using_armgcc.md  run_a_project_using_mcux.md  run_project.md  run_project.rst  using_kconfig.md  vscode.md
introduction/: README.md  index.rst
middleware/: boot.rst  cloud.rst  connectivity.rst  eiq.rst  file_system.rst  index.rst  mbedtls3x.rst  motor_control.rst  multicore.rst  multimedia.rst  safety_iec60730b.rst  sensors.rst  wireless.rst
release/: index.rst  known_issues.rst  migration_guides.md  release-notes-changelog.rst  release_metrics.md  release_quality.md
rtos/: index.rst
scripts/: build_all_docs.py  validate_paths.py  west_commands.yml
(+3908 files in other folders)
